@@ -1,3 +1,9 @@
+2008-07-11  Christophe Romain  <christophe.romain@process-one.net>
+
+	* src/ejabberd_c2s.erl: Backport C2S blacklist support from trunk
+	was (EJAB-625).
+	* src/mod_ip_blacklist.erl: Likewise.
+
 2008-07-10  Badlop  <badlop@process-one.net>
 
 	* src/configure.ac: Don't check for erlang header file (EJAB-232)
